--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ p{
     color: slategray;
     text-align: right;
     line-height: 30px;
+    text-indent: 0%;
     letter-spacing: 3px;
     column-count: 2;
     column-gap: 60px;
