--- a/HTML-5-Semantics/css/style.css
+++ b/HTML-5-Semantics/css/style.css
@@ -96,7 +96,7 @@ section.join{
     background-color: #f4f4f4;
     text-align: center;
     padding: 60px 20px;
-    color: #4b4b4b;
+    color:grey;
 }
 section.join h2{
     font-size: 36px;
