--- a/HTML-5-Semantics/css/style.css
+++ b/HTML-5-Semantics/css/style.css
@@ -139,3 +139,22 @@ form input:focus{
 form input:valid{
     border: 4px solid #71d300;
 }
+nav li:first-child{
+    border: 3px solid red;
+}
+article p::first-line{
+    font-size: 2.0em;
+    font-weight: bold;
+}
+section.join p::first-letter{
+ font-size: large;   
+ font-weight: bold;
+ color: black;
+}
+section.join p::selection{
+    background: black;
+    color: white;
+}
+p::after{
+    content:" (end)";
+}
