--- a/HTML-5-Semantics/css/style.css
+++ b/HTML-5-Semantics/css/style.css
@@ -139,9 +139,9 @@ form input:focus{
 form input:valid{
     border: 4px solid #71d300;
 }
-nav li:first-child{
+/* nav li:first-child{
     border: 3px solid red;
-}
+} */
 article p::first-line{
     font-size: 2.0em;
     font-weight: bold;
@@ -157,4 +157,51 @@ section.join p::selection{
 }
 p::after{
     content:" (end)";
+}
+
+/* responsive styles */
+@media screen and (max-width:1200px){
+    .banner .welcome h2{
+        font-size: 60px;
+    }
+    nav li{
+        font-size: 20px;
+    }
+}
+@media screen and (max-width:960px){
+    .banner .welcome h2{
+        font-size: 40px;
+    }
+}
+@media screen and (max-width:700px){
+    .banner .welcome{
+        position: relative;
+        text-align: center;
+        padding: 10px;
+    }
+    .banner .welcome br{
+        display: none;
+    }
+    .banner .welcome h2{
+        font-size: 30px;
+    }
+    .banner .welcome span{
+        font-size: 1.0em;
+    }
+}
+
+@media screen and (max-width:560px) {
+    nav li{
+        font-size: 20px;
+        display: block;
+        width: 100%;
+        margin: 12px 0;
+    }
+    header{
+        position: relative;
+    }
+    nav{
+        top: 0;
+    }
+
 }
